--- a/account/templates/my-profile.html
+++ b/account/templates/my-profile.html
@@ -428,29 +428,89 @@ Header END -->
           <!-- Card START -->
           <div class="col-md-6 col-lg-12">
             <div class="card">
-              <!-- Card header START -->
-              <div class="card-header d-flex justify-content-between border-0">
-                <h5 class="card-title">Önerilen onaylı kullanıcılar</h5>
-                <a class="btn btn-primary-soft btn-sm" href="#!"> <i class="fa-solid fa-plus"></i> </a>
-              </div>
-              <!-- Card header END -->
-              <div class="card-body position-relative pt-0">
-                <!-- Experience item START -->
-                <div class="d-flex">
-                  <!-- Avatar -->
-                  <div class="avatar me-3">
-                    <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
-                  </div>
-                  <!-- Info -->
-                  <div>
-                    <h6 class="card-title mb-0"><a href="#!"> userName </a></h6>
-                  </div>
+                <!-- Card header START -->
+                <div class="card-header d-flex justify-content-between border-0">
+                    <h5 class="card-title">Önerilen onaylı kuruluşlar</h5>
+                    <a class="btn btn-primary-soft btn-sm" href="#!"> <i class="fa-solid fa-plus"></i> </a>
                 </div>
-                <!-- Experience item END -->
-              </div>
-              <!-- Card body END -->
+                <!-- Card header END -->
+                <!-- Card body START -->
+                <div class="card-body position-relative pt-0">
+                    <!-- Experience item START -->
+                    <div class="d-flex mb-3">
+                        <!-- Avatar -->
+                        <div class="avatar me-3">
+                            <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/ahbap.jpg' %}" alt=""> </a>
+                        </div>
+                        <!-- Info -->
+                        <div>
+                            <h6 class="card-title mb-0"><a href="https://ahbap.org/"> Ahbap </a></h6>
+                        </div>
+                    </div>
+                    <!-- Experience item END -->
+                </div>
+                <div class="card-body position-relative pt-0">
+                    <!-- Experience item START -->
+                    <div class="d-flex mb-3">
+                        <!-- Avatar -->
+                        <div class="avatar me-3">
+                            <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/yesilay.jpg' %}" alt=""> </a>
+                        </div>
+                        <!-- Info -->
+                        <div>
+                            <h6 class="card-title mb-0"><a href="https://www.yesilay.org.tr/tr/"> Yeşilay </a></h6>
+                        </div>
+                    </div>
+                    <!-- Experience item END -->
+                </div>
+                <div class="card-body position-relative pt-0">
+                    <!-- Experience item START -->
+                    <div class="d-flex mb-3">
+                        <!-- Avatar -->
+                        <div class="avatar me-3">
+                            <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/kızılay.jpg' %}" alt=""> </a>
+                        </div>
+                        <!-- Info -->
+                        <div>
+                            <h6 class="card-title mb-0"><a href="https://www.kizilay.org.tr/"> Kızılay </a></h6>
+                        </div>
+                    </div>
+                    <!-- Experience item END -->
+                </div>
+                <div class="card-body position-relative pt-0">
+                    <!-- Experience item START -->
+                    <div class="d-flex mb-3">
+                        <!-- Avatar -->
+                        <div class="avatar me-3">
+                            <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/afad.jpg' %}" alt=""> </a>
+                        </div>
+                        <!-- Info -->
+                        <div>
+                            <h6 class="card-title mb-0"><a href="https://www.afad.gov.tr/"> Afad </a></h6>
+                        </div>
+                    </div>
+                    <!-- Experience item END -->
+                </div>
+                <!-- Card body END -->
             </div>
-          </div>
+        </div>
+        
+        <style>
+            .card-body .d-flex {
+                align-items: center;
+            }
+            .card-body .d-flex.mb-3 {
+                margin-bottom: 1rem;
+            }
+            .avatar img {
+                width: 50px;
+                height: 50px;
+            }
+            .card-title a {
+                text-decoration: none;
+            }
+        </style>
+        
           <!-- Card END -->
           
         
