--- a/account/templates/messaging.html
+++ b/account/templates/messaging.html
@@ -139,7 +139,7 @@ Header START -->
 
         <li class="nav-item ms-2 dropdown">
 					<a class="nav-link btn icon-md p-0" href="#" id="profileDropdown" role="button" data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown" aria-expanded="false">
-						<img class="avatar-img rounded-2" src="assets/images/avatar/07.jpg" alt="">
+						<img class="avatar-img rounded-2" src="{{user.userprofile.profile_picture.url }}" alt="">
 					</a>
           <ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
             <!-- Profile info -->
@@ -147,11 +147,10 @@ Header START -->
               <div class="d-flex align-items-center position-relative">
                 <!-- Avatar -->
                 <div class="avatar me-3">
-                  <img class="avatar-img rounded-circle" src="assets/images/avatar/07.jpg" alt="avatar">
+                <img class="avatar-img rounded-circle" src="{{user.userprofile.profile_picture.url }}" alt="avatar">
                 </div>
                 <div>
-                  <a class="h6 stretched-link" href="#">user.username</a>
-                  
+                  <a class="h6 stretched-link" href="#">{{user.username }}</a>
                 </div>
               </div>
               <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="/profil">Profilini görüntüle </a>
@@ -205,99 +204,97 @@ Header START -->
 <!-- =======================
 Header END -->
 
-<!-- **************** MAIN CONTENT START **************** -->
 <main>
   <!-- Container START -->
   <div class="container">
-		<div class="row gx-0">
+    <div class="row gx-0">
       <!-- Sidebar START -->
       <div class="col-lg-4 col-xxl-3" id="chatTabs" role="tablist">
         <!-- Divider -->
         <div class="d-flex align-items-center mb-4 d-lg-none">
-            <button class="border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="btn btn-primary"><i class="fa-solid fa-sliders-h"></i></span>
-                <span class="h6 mb-0 fw-bold d-lg-none ms-2">Chats</span>
-            </button>
+          <button class="border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="btn btn-primary"><i class="fa-solid fa-sliders-h"></i></span>
+            <span class="h6 mb-0 fw-bold d-lg-none ms-2">Chats</span>
+          </button>
         </div>
         <!-- Advanced filter responsive toggler END -->
         <div class="card card-body border-end-0 border-bottom-0 rounded-bottom-0">
-            <div class="d-flex justify-content-between align-items-center">
-                <h1 class="h5 mb-0">Aktif mesajlar <span class="badge bg-success bg-opacity-10 text-success">{{ istekler.count }}</span></h1>
-                <!-- Chat new create message item START -->
-                <div class="dropend position-relative">
-                    <div class="nav">
-                        <a class="icon-md rounded-circle btn btn-sm btn-primary-soft nav-link toast-btn" data-target="chatToast" href="#"> <i class="bi bi-pencil-square"></i> </a>
-                    </div>
-                </div>
-                <!-- Chat new create message item END -->
+          <div class="d-flex justify-content-between align-items-center">
+            <h1 class="h5 mb-0">Aktif mesajlar <span class="badge bg-success bg-opacity-10 text-success">{{ istekler.count }}</span></h1>
+            <!-- Chat new create message item START -->
+            <div class="dropend position-relative">
+              <div class="nav">
+                <a class="icon-md rounded-circle btn btn-sm btn-primary-soft nav-link toast-btn" data-target="chatToast" href="#"> <i class="bi bi-pencil-square"></i> </a>
+              </div>
             </div>
+            <!-- Chat new create message item END -->
+          </div>
         </div>
         <nav class="navbar navbar-light navbar-expand-lg mx-0">
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
-                <!-- Offcanvas header -->
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close text-reset ms-auto" data-bs-dismiss="offcanvas"></button>
-                </div>
-                <!-- Offcanvas body -->
-                <div class="offcanvas-body p-0">
-                    <div class="card card-chat-list rounded-end-lg-0 card-body border-end-lg-0 rounded-top-0">
-                        <!-- Chat list tab START -->
-                        <div class="mt-4 h-100">
-                            <div class="chat-tab-list custom-scrollbar">
-                                <ul class="nav flex-column nav-pills nav-pills-soft">
-                                    {% for istek in istekler %}
-                                    <li class="mt-3 hstack gap-3 align-items-center position-relative">
-                                        <!-- Avatar -->
-                                        <div class="avatar status-online">
-                                            {% if istek.user.userprofile.profile_picture %}
-                                            <img class="avatar-img rounded-circle" src="{{ istek.user.userprofile.profile_picture.url }}" alt="">
-                                            {% else %}
-                                            <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
-                                            {% endif %}
-                                        </div> 
-                                       
-                                        <!-- Info -->
-                                        <div class="overflow-hidden">
-                                            <a class="h6 mb-0 stretched-link" href="/profile/{{ istek.user.username }}">{{ istek.user.username }}</a>
-                                            <div class="small text-secondary text-truncate">{{ istek.istek_mesaji }}</div>
-                                        </div>
-                                        <!-- Chat time -->
-                                        <div class="small ms-auto text-nowrap">{{ istek.created_at }}</div>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                       
-                        <!-- Chat list tab END -->
-                    </div>
-                </div>
+          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
+            <!-- Offcanvas header -->
+            <div class="offcanvas-header">
+              <button type="button" class="btn-close text-reset ms-auto" data-bs-dismiss="offcanvas"></button>
             </div>
+            <!-- Offcanvas body -->
+            <div class="offcanvas-body p-0">
+              <div class="card card-chat-list rounded-end-lg-0 card-body border-end-lg-0 rounded-top-0">
+                <!-- Chat list tab START -->
+                <div class="mt-4 h-100">
+                  <div class="chat-tab-list custom-scrollbar">
+                    <ul class="nav flex-column nav-pills nav-pills-soft">
+                      {% for istek in istekler %}
+                      <li class="mt-3 hstack gap-3 align-items-center position-relative">
+                        <!-- Avatar -->
+                        <div class="avatar status-online">
+                          {% if istek.user.userprofile.profile_picture %}
+                          <img class="avatar-img rounded-circle" src="{{ istek.user.userprofile.profile_picture.url }}" alt="">
+                          {% else %}
+                          <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+                          {% endif %}
+                        </div>
+                        <!-- Info -->
+                        <div class="overflow-hidden">
+                          <a class="h6 mb-0 stretched-link" href="/profile/{{istek.user.username}}">{{ istek.user.username }}</a>
+                          <div class="small text-secondary text-truncate">{{ istek.istek_mesaji }}</div>
+                          <div class="small text-secondary text-truncate">Şehir: {{ istek.country }}</div>
+                          <div class="small text-secondary text-truncate">İlçe: {{ istek.city }}</div>
+                        </div>
+                        <!-- Chat time -->
+                        <div class="small ms-auto text-nowrap">{{ istek.created_at }}</div>
+                        <!-- Actions -->
+                      </li>
+                      {% endfor %}
+                    </ul>
+                  </div>
+                </div>
+                <!-- Chat list tab END -->
+              </div>
+            </div>
+          </div>
         </nav>
-    </div>
-    
+      </div>
+      <!-- Sidebar END -->
+
+      <!-- Chat conversation START -->
       <div class="col-lg-8 col-xxl-9">
         <div class="card card-chat rounded-start-lg-0 border-start-lg-0">
           <div class="card-body h-100">
-             <div class="fade tab-pane h-100" id="chat-6" role="tabpanel" aria-labelledby="chat-6-tab">
-                <!-- Top avatar and status START -->
-                <div class="d-sm-flex justify-content-between align-items-center">
-                  <div class="d-flex mb-2 mb-sm-0">
-                  </div>
-                  <div class="d-flex align-items-center">
-                    <!-- Call button -->
-                    <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Audio call"><i class="bi bi-telephone-fill"></i></a>
-                    <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Video call"><i class="bi bi-camera-video-fill"></i></a>
-                    <!-- Card action START -->
-                    <!-- Card action END -->
-                  </div>
+            <div class="fade tab-pane h-100" id="chat-6" role="tabpanel" aria-labelledby="chat-6-tab">
+              <!-- Top avatar and status START -->
+              <div class="d-sm-flex justify-content-between align-items-center">
+                <div class="d-flex mb-2 mb-sm-0">
                 </div>
-                <!-- Top avatar and status END -->
-                
-                 <!-- Chat conversation START -->
-                <!-- Chat conversation END -->
+                <div class="d-flex align-items-center">
+                  <!-- Call button -->
+                  <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Audio call"><i class="bi bi-telephone-fill"></i></a>
+                  <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Video call"><i class="bi bi-camera-video-fill"></i></a>
+                </div>
               </div>
-              <!-- Conversation item END -->
+              <!-- Top avatar and status END -->
+
+              <!-- Chat conversation START -->
+              <!-- Chat conversation END -->
             </div>
           </div>
           <div class="card-footer">
@@ -311,12 +308,11 @@ Header END -->
         </div>
       </div>
       <!-- Chat conversation END -->
-    </div> <!-- Row END -->
-    <!-- =======================
-    Chat END -->  
-	</div>
+    </div>
+  </div>
   <!-- Container END -->
 </main>
+
 <!-- **************** MAIN CONTENT END **************** -->
 
 <!-- Chat START -->
