--- a/account/templates/my-profile.html
+++ b/account/templates/my-profile.html
@@ -540,6 +540,15 @@ Header END -->
         <div class="mb-3">
             <input type="text" class="form-control pe-4 border-0" name="post_title" placeholder="Başlık">
         </div>
+        <div class="mb-3">
+          <input type="text" class="form-control pe-4 border-0" name="post_country" placeholder="İl bilgisi giriniz">
+        </div>
+          <div class="mb-3">
+          <input type="text" class="form-control pe-4 border-0" name="post_city" placeholder="İlçe bilgisi giriniz">
+        </div>
+          <div class="mb-3">
+          <input type="text" class="form-control pe-4 border-0" name="post_district" placeholder="Mahalle bilgisi giriniz (isteğe bağlı boş bırakıla bilir)">
+        </div>
         <textarea class="form-control pe-4 border-0" rows="2" data-autoresize name="post_content" placeholder="Bağış postu alanı..."></textarea>
         <br><br>
         <!-- Resim yükleme alanı -->
@@ -547,15 +556,6 @@ Header END -->
             <input type="file" class="form-control" name="post_image" accept="image/*">
         </div>
         <div class="modal-footer row justify-content-between">
-            <!-- Select -->
-            <!--<div class="col-lg-3">
-                <select class="form-select js-choice" data-position="top" data-search-enabled="false">
-                    <option value="PB">Deneme</option>
-                    <option value="PV">denemee</option>
-                    <option value="PV">deneme</option>
-                </select>
-            </div>
-            <!-- Button -->
             <div class="col-lg-8 text-sm-end">
                 <button type="submit" class="btn btn-primary-soft">Gönder</button>
             </div>
