--- a/account/templates/messaging.html
+++ b/account/templates/messaging.html
@@ -139,7 +139,11 @@ Header START -->
 
         <li class="nav-item ms-2 dropdown">
 					<a class="nav-link btn icon-md p-0" href="#" id="profileDropdown" role="button" data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown" aria-expanded="false">
-						<img class="avatar-img rounded-2" src="{{user.userprofile.profile_picture.url }}" alt="">
+						{% if request.user.userprofile.profile_picture %}
+            <img class="avatar-img rounded-2" src="{{ user.userprofile.profile_picture.url }}" alt="">
+            {% else %}
+            <img class="avatar-img rounded-2" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+            {% endif %}
 					</a>
           <ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
             <!-- Profile info -->
@@ -147,7 +151,11 @@ Header START -->
               <div class="d-flex align-items-center position-relative">
                 <!-- Avatar -->
                 <div class="avatar me-3">
-                <img class="avatar-img rounded-circle" src="{{user.userprofile.profile_picture.url }}" alt="avatar">
+                  {% if request.user.userprofile.profile_picture %}
+                  <img class="avatar-img rounded-circle" src="{{ user.userprofile.profile_picture.url }}" alt="">
+                  {% else %}
+                  <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+                  {% endif %}
                 </div>
                 <div>
                   <a class="h6 stretched-link" href="#">{{user.username }}</a>
@@ -164,7 +172,7 @@ Header START -->
               </a> 
             </li>
             <li class="dropdown-divider"></li>
-            <li><a class="dropdown-item bg-danger-soft-hover" href="/loguot"><i class="bi bi-power fa-fw me-2"></i>Çıkış yap</a></li>
+            <li><a class="dropdown-item bg-danger-soft-hover" href="/logout"><i class="bi bi-power fa-fw me-2"></i>Çıkış yap</a></li>
             <li> <hr class="dropdown-divider"></li>
             <!-- Dark mode options START -->
 						<li>
@@ -222,11 +230,14 @@ Header END -->
           <div class="d-flex justify-content-between align-items-center">
             <h1 class="h5 mb-0">Aktif mesajlar <span class="badge bg-success bg-opacity-10 text-success">{{ istekler.count }}</span></h1>
             <!-- Chat new create message item START -->
-            <div class="dropend position-relative">
-              <div class="nav">
-                <a class="icon-md rounded-circle btn btn-sm btn-primary-soft nav-link toast-btn" data-target="chatToast" href="#"> <i class="bi bi-pencil-square"></i> </a>
+            <!--
+
+              <div class="dropend position-relative">
+                <div class="nav">
+                  <a class="icon-md rounded-circle btn btn-sm btn-primary-soft nav-link toast-btn" data-target="chatToast" href="#"> <i class="bi bi-pencil-square"></i> </a>
+                </div>
               </div>
-            </div>
+            -->
             <!-- Chat new create message item END -->
           </div>
         </div>
@@ -242,10 +253,12 @@ Header END -->
                 <!-- Chat list tab START -->
                 <div class="mt-4 h-100">
                   <div class="chat-tab-list custom-scrollbar">
-                    <ul class="nav flex-column nav-pills nav-pills-soft">
+                    <ul class="nav flex-column nav-pills nav-pills-soft" id="conversations">
+                      <a class="h6 mb-0 stretched-link" href="#">Mesajlar yükleniyor...</a>
+                      <!--
                       {% for istek in istekler %}
                       <li class="mt-3 hstack gap-3 align-items-center position-relative">
-                        <!-- Avatar -->
+                        <!- Avatar ->
                         <div class="avatar status-online">
                           {% if istek.user.userprofile.profile_picture %}
                           <img class="avatar-img rounded-circle" src="{{ istek.user.userprofile.profile_picture.url }}" alt="">
@@ -253,18 +266,19 @@ Header END -->
                           <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
                           {% endif %}
                         </div>
-                        <!-- Info -->
+                        <!- Info ->
                         <div class="overflow-hidden">
                           <a class="h6 mb-0 stretched-link" href="/profile/{{istek.user.username}}">{{ istek.user.username }}</a>
                           <div class="small text-secondary text-truncate">{{ istek.istek_mesaji }}</div>
                           <div class="small text-secondary text-truncate">Şehir: {{ istek.country }}</div>
                           <div class="small text-secondary text-truncate">İlçe: {{ istek.city }}</div>
                         </div>
-                        <!-- Chat time -->
+                        <!- Chat time ->
                         <div class="small ms-auto text-nowrap">{{ istek.created_at }}</div>
-                        <!-- Actions -->
+                        <!- Actions ->
                       </li>
                       {% endfor %}
+                      -->
                     </ul>
                   </div>
                 </div>
@@ -280,29 +294,53 @@ Header END -->
       <div class="col-lg-8 col-xxl-9">
         <div class="card card-chat rounded-start-lg-0 border-start-lg-0">
           <div class="card-body h-100">
-            <div class="fade tab-pane h-100" id="chat-6" role="tabpanel" aria-labelledby="chat-6-tab">
+            <div class="fade tab-pane h-100" id="offcanvasSingleChat" role="tabpanel" aria-labelledby="chat-6-tab">
               <!-- Top avatar and status START -->
               <div class="d-sm-flex justify-content-between align-items-center">
-                <div class="d-flex mb-2 mb-sm-0">
+                <div class="m-3 hstack gap-3 align-items-center position-relative" style="width: 100%;">
+                  <div class="avatar status-online">
+                    <img class="avatar-img rounded-circle" id="conversation-avatar" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+                  </div>
+                  <!-- Info -->
+                  <div class="overflow-hidden">
+                    <a class="h6 mb-0" href="#!" id="conversation-title"></a>
+                  </div>
+                  <!-- Conversation Details -->
+                  <div>
+                    <div style="color: #4e5059;" class="fw-bold small ms-auto text-nowrap" id="conversation-last-seen"></div>
+                    <div style="color: #676a79;" class="small text-truncate" id="conversation-istek-location"></div>
+                  </div>
+
+                  <div class="fw-bold ms-auto text-truncate" id="conversation-istek-title"></div>
                 </div>
-                <div class="d-flex align-items-center">
-                  <!-- Call button -->
-                  <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Audio call"><i class="bi bi-telephone-fill"></i></a>
-                  <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Video call"><i class="bi bi-camera-video-fill"></i></a>
-                </div>
-              </div>
+              </div><hr>
               <!-- Top avatar and status END -->
 
               <!-- Chat conversation START -->
+              <div class="pt-0 custom-scrollbar" id="offcanvasSingleChatScroll" style="max-height: 80%;">
+                <ul class="list-unstyled" id="messages" style="padding-bottom: 2rem; max-height: 50%; overflow-y: scroll;" >
+                  <div class="fw-bold ms-auto text-truncate">Lütfen bir konuşma seçin...</div>
+                </ul>
+                <!-- Chat bottom START -->
+                <div class="mt-2" style="
+                    position: fixed;
+                    bottom: 0;
+                    width: 350px;
+                    background-color: white;
+                  ">
+                  <!-- Chat textarea -->
+                  <!-- Button -->
+                </div>
+                <!-- Chat bottom END -->
+              </div>
               <!-- Chat conversation END -->
             </div>
-          </div>
-          <div class="card-footer">
-            <div class="d-sm-flex align-items-end">
-              <textarea class="form-control mb-sm-0 mb-3" data-autoresize placeholder="Type a message" rows="1"></textarea>
-              <button class="btn btn-sm btn-danger-soft ms-sm-2"><i class="fa-solid fa-face-smile fs-6"></i></button>
-              <button class="btn btn-sm btn-secondary-soft ms-2"><i class="fa-solid fa-paperclip fs-6"></i></button>
-              <button class="btn btn-sm btn-primary ms-2"><i class="fa-solid fa-paper-plane fs-6"></i></button>
+            <div class="card-footer">
+              <div class="d-sm-flex align-items-end mt-2">
+                <button class="btn btn-sm btn-secondary-soft me-2"><i class="fa-solid fa-paperclip fs-6"></i></button>
+                <textarea class="form-control mb-sm-0 mb-3 me-2" placeholder="Mesaj yazın" rows="1" id="send-message-input"></textarea>
+                <button class="btn btn-sm btn-primary ms-2" disabled id="send-message-button"><i class="fa-solid fa-paper-plane fs-6"></i></button>
+              </div>
             </div>
           </div>
         </div>
@@ -363,7 +401,287 @@ JS libraries, plugins and custom scripts -->
 
 <!-- Theme Functions -->
 <script src="{% static 'assets/js/functions.js' %}"></script>
+<script>
+	const conversationsElement = document.getElementById("conversations");
+	const singleMessageWrapper = document.getElementById("offcanvasSingleChat");
+	const singleMessageScroll = document.getElementById("offcanvasSingleChatScroll");
+	const closeOffcanvasSingleChat = document.getElementById("closeOffcanvasSingleChat");
+	const messagesElement = document.getElementById("messages");
 
+	const sendMessageInput = document.getElementById("send-message-input");
+	const sendMessageButton = document.getElementById("send-message-button");
+	
+	// closeOffcanvasSingleChat.onclick = () => {
+	// 	singleMessageWrapper.classList.remove("show");
+	// 	clearInterval(currentConversationIntervalId);
+	// 	currentConversationIntervalId = null;  // not necessary
+	// }
+
+	sendMessageButton.onclick = handle_send_message;
+
+	var oldConversations = null;
+	var oldMessages = null;
+	
+	get_conversations();
+	setInterval(() => {
+		get_conversations();
+	}, 1000);
+
+	function get_conversations() {
+		
+		fetch(
+			"{% url 'get_all_conversations' %}"
+		).then(r => {
+			if(!r.ok){
+				throw new Error("response was not ok")
+			}
+			return r.json();
+		}).then(data => {
+			if(JSON.stringify(oldConversations) !== JSON.stringify(data)){
+				place_conversations(data.conversations);
+				oldConversations = data;
+			}
+		}).catch(e => {
+			console.error(e);
+		});
+	}
+
+
+	var currentConversationIntervalId = null;
+	function place_conversations(conversations) {
+		conversationsElement.innerHTML = "";
+		conversations.forEach(conversation => {
+			let li = document.createElement("li");
+			li.className = "mt-3 hstack gap-3 align-items-center position-relative";
+			
+			li.onclick = () => {
+				singleMessageWrapper.classList.add("show");
+        clearInterval(currentConversationIntervalId);
+				get_messages(conversation.user_id);
+        document.getElementById("conversation-avatar").src = profilePic;
+				currentConversationIntervalId = setInterval(() => {
+					get_messages(conversation.user_id);
+				}, 1000);
+			}
+      const profilePic = conversation.istek.user.profilePic ? conversation.istek.user.profilePic : "{% static 'assets/images/avatar/0.jpg' %}";
+			li.innerHTML = 
+			`
+      <!-- Avatar -->
+      <div class="avatar status-online">
+        <img class="avatar-img rounded-circle" src=${profilePic} alt="">
+      </div>
+      <!-- Info -->
+      <div class="overflow-hidden">
+        <a class="h6 mb-0 stretched-link" href="#">${conversation.username}</a>
+				<div class="small text-secondary text-truncate">${conversation.message}</div>
+      </div>
+      <!-- Chat time -->
+			<div class="small ms-auto text-nowrap"> ${formatDate(conversation.date)} </div>
+			`
+			conversationsElement.appendChild(li);
+		});
+	}
+	
+	
+	var currentConversation = null;
+	function get_messages(user_id) {
+		currentConversation = user_id;
+		const formData = new FormData();
+		formData.append("user_id", user_id);
+		fetch("{% url 'get_messages' %}",
+			{
+				method: "POST",
+				body: formData
+			}
+		).then(r => {
+			if(!r.ok){
+				return r.json().then(errorData => {
+					throw new Error(errorData.error);
+				});
+			}
+			return r.json();
+		}).then(data => {
+			if(JSON.stringify(oldMessages) !== JSON.stringify(data)){
+				place_messages(data.messages, data.other_user, data.istekDetaylari);
+				oldMessages = data;
+			}
+			
+		}).catch(e => {
+			console.error(e);
+		});
+	}
+	
+	
+	function place_messages(messages, other_user, istekDetaylari) {
+		document.getElementById("conversation-title").innerHTML = other_user.username;
+		document.getElementById("conversation-last-seen").innerHTML = `son görülme ${formatDate(other_user.last_login)}`;
+		document.getElementById("conversation-istek-title").innerHTML = `${istekDetaylari.title}`
+		document.getElementById("conversation-istek-location").innerHTML = `${formatLocation(istekDetaylari)}`;
+		messagesElement.innerHTML = "";
+		var previousDate = null;
+		messages.forEach(message => {
+			if(previousDate !== new Date(message.date).getDate()){
+				let date = document.createElement("div");
+				date.className = "text-center small my-2";
+				date.innerHTML = formatDate(message.date);
+				messagesElement.append(date);
+				previousDate = new Date(message.date).getDate();
+			}
+			let li = document.createElement("li");
+			li.className = "chat-conversation-content custom-scrollbar";
+			li.onclick = () => {
+				singleMessageWrapper.classList.add("show");
+			}
+			li.innerHTML = message.is_sent ? (`
+				<!-- Chat message right -->
+				<div class="d-flex justify-content-end text-end mb-1">
+					<div class="w-100">
+						<div class="d-flex flex-column align-items-end">
+							<div class="bg-primary text-white p-2 px-3 rounded-2">${message.message}</div>
+							<!-- Images -->
+							<div class="d-flex my-2">
+								<div class="small text-secondary">${formatTime(message.date)}</div>
+								<div class="small ms-2"><i class="fa-solid fa-check-double" ${message.is_read ? 'style="color: rgb(22, 170, 170);"' : ""}"></i></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			`) : (`
+				<!-- Chat message left -->
+				<div class="d-flex mb-1">
+					<div class="flex-shrink-0 avatar avatar-xs me-2">
+						<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="${other_user}">
+					</div>
+					<div class="flex-grow-1">
+						<div class="w-100">
+							<div class="d-flex flex-column align-items-start">
+								<div class="bg-light text-secondary p-2 px-3 rounded-2">${message.message}</div>
+								<div class="small my-2">${formatTime(message.date)}</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			
+			`)
+
+			
+			messagesElement.appendChild(li);
+		});
+		singleMessageScroll.firstChild.scrollTo({
+        top: singleMessageScroll.scrollHeight,
+        behavior: 'smooth'
+    });
+		
+	}
+
+
+	sendMessageInput.oninput = e => {
+		sendMessageButton.disabled = !sendMessageInput.value;
+	}
+
+
+	function handle_send_message(){
+		if(!sendMessageInput.value){return}
+		send_message(sendMessageInput.value);
+		sendMessageInput.value = "";
+		sendMessageButton.disabled = true;
+	}
+
+	function send_message(message) {
+		const formData = new FormData();
+		formData.append("user_id", currentConversation);
+		formData.append("message", message);
+		fetch("{% url 'send_message' %}",
+			{
+				method: "POST",
+				body: formData
+			}
+		).then(r => {
+			if(!r.ok){
+				return r.json().then(errorData => {
+					throw new Error(errorData.error);
+				});
+			}
+			return r.json();
+		}).then(data => {
+			
+		}).catch(e => {
+			console.error(e);
+		});
+	}
+
+
+	function formatDate(dateString) {
+		const date = new Date(dateString) 
+		// const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", 
+		// 					"Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+    const monthNames = ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran", 
+    "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"];
+
+		let hours = date.getHours();
+		let minutes = date.getMinutes();
+
+		minutes = minutes < 10 ? '0' + minutes : minutes;
+
+		// let am_pm = hours > 12 ? "PM" : "AM";
+		let am_pm = hours > 12 ? "ÖS" : "ÖÖ";
+
+		let month = monthNames[date.getMonth()];
+		let day = date.getDate();
+
+		return `${day} ${month}, ${am_pm} ${hours}:${minutes}`;
+		// return `${month} ${day} at ${hours}:${minutes} ${am_pm}`;
+		// return `${hours}:${minutes} at ${month} ${day}`;
+	}
+
+	function formatDateForMessage(dateString) {
+		const date = new Date(dateString) 
+		// const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", 
+		// 					"Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+		const monthNames = ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran", 
+		 					"Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"];
+
+		let hours = date.getHours();
+		let minutes = date.getMinutes();
+
+		minutes = minutes < 10 ? '0' + minutes : minutes;
+
+		let month = monthNames[date.getMonth()];
+		let day = date.getDate();
+
+		return `${day} ${month} ${hours}:${minutes}`;
+		// return `${month} ${day} at ${hours}:${minutes}`;
+		// return `${hours}:${minutes} at ${month} ${day}`;
+	}
+
+	function formatTime(dateString) {
+		const date = new Date(dateString) 
+
+		let hours = date.getHours();
+		let minutes = date.getMinutes();
+
+		// let am_pm = hours > 12 ? "PM" : "AM";
+		let am_pm = hours > 12 ? "ÖS" : "ÖÖ";
+
+		minutes = minutes < 10 ? '0' + minutes : minutes;
+
+
+		return `${hours}:${minutes} ${am_pm}`;
+
+		// return `${hours}:${minutes} at ${month} ${day}`;
+	}
+
+
+	function formatLocation(location) {
+    return `${location.district ? location.district + " - " : ""}${location.city}/${location.country}`
+	}
+
+
+
+
+
+
+</script>
 </body>
 
 
